# tpt-datacenter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  Makefile  README.md  RELEASE.md  SECURITY.md  deny.toml  docker-compose.yml  go.work  spec.txt  todo 1260715.md  todo.md
.cargo/: audit.toml  config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security.yml
.github/workflows/: ci.yml
ai-brain/: Cargo.toml  README.md
ai-brain/src/: lib.rs  model.rs  rl.rs  safety.rs  serve.rs  train.rs
api/: README.md  go.mod
api/cmd/control/: main.go
api/cmd/hardware/: main.go
api/cmd/orchestrator/: main.go
api/internal/control/: server.go  state.go  state_test.go
api/internal/hardware/: audit.go  gridstress.go  hardware_test.go  ipmi.go  redfish.go  server.go  util.go
api/internal/orchestration/: bench_test.go  e2e_test.go  helpers.go  orchestrator.go  orchestrator_test.go  server.go
api/internal/orchestration/pb/: tpt.pb.go
api/proto/tpt/v1/: tpt.proto
ci/: check-spdx.sh
dashboard/: README.md  go.mod
dashboard/cmd/dashboard/: main.go
dashboard/static/: app.css  app.js  index.html
deploy/docker/: go.Dockerfile  rust.Dockerfile
deploy/questdb/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  schema.sql
deploy/questdb/conf/: questdb-dev.conf  questdb-prod.conf  questdb-staging.conf
deploy/topology/: facility.json
docs/: api-reference.md  architecture.md  getting-started.md  hardware-bringup.md  real-hardware-bringup.md
docs/security/: no-backdoors.md  threat-model.md
go-telemetry/: README.md  go.mod
go-telemetry/cmd/: main.go
go-telemetry/cmd/api/: main.go
go-telemetry/cmd/loadtest/: main.go
go-telemetry/cmd/topology/: main.go
go-telemetry/internal/collector/: collector.go  ipmi.go  modbus.go  redfish.go  synthetic.go
go-telemetry/internal/metrics/: deadletter.go  metrics.go
go-telemetry/internal/pipeline/: pipeline.go  pipeline_test.go
go-telemetry/internal/point/: point.go  point_test.go
go-telemetry/internal/questdb/: bench_test.go  client.go  questdb_test.go  retention.go  schema.go  server.go
go-telemetry/internal/topology/: author.go  graph.go  model.go  server.go  topology_test.go
go-telemetry/internal/writer/: writer.go
rust-edge/: Cargo.toml  README.md
rust-edge/src/: firmware.rs  lib.rs
rust-edge/src/control/: agents.rs  mod.rs  pid.rs  safety.rs  supervisor.rs  tests.rs
rust-edge/src/hal/: config.rs  mod.rs  simulator.rs  tests.rs  types.rs
rust-edge/src/hal/real/: ipmi.rs  mod.rs  modbus.rs  redfish.rs
topology-graph/: README.md
