[package]
name = "ai-brain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Thermal AI Brain: reinforcement learning model (Rust/burn) for hotspot prediction and cooling optimization."
keywords = ["reinforcement-learning", "thermal", "datacenter", "burn", "rl"]
categories = ["science", "algorithms", "embedded"]

[dependencies]
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
burn = { version = "0.17", features = ["std", "ndarray", "autodiff"] }

[dev-dependencies]
